tests/NormalTests/paczka1/fuzzy1/95816531.err
Error in line 1: BqA A66 48,8
Error in line 5: ypn S129 54,1
Error in line 11: ypn A522 8,0
Error in line 17: S260 A66 75,3
Error in line 26: dLe8yzP S260 13,8
